--- a/Leetcode_challenges1.ipynb
+++ b/Leetcode_challenges1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Remove Duplicates from Sorted Array\n",
+    "### Remove Duplicates from Sorted Array\n",
     "\n",
     "Given a sorted array nums, remove the duplicates in-place such that each element appears only once.\n",
     "\n",
@@ -61,6 +61,97 @@
     }
    ],
    "source": [
+    "nums"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Given an array, rotate the array to the right by k steps, where k is non-negative. \n",
+    "* Input: nums = [1,2,3,4,5,6,7], k = 3\n",
+    "* Output: [5,6,7,1,2,3,4]\n",
+    "* Explanation:\n",
+    "* rotate 1 steps to the right: [7,1,2,3,4,5,6]\n",
+    "* rotate 2 steps to the right: [6,7,1,2,3,4,5]\n",
+    "* rotate 3 steps to the right: [5,6,7,1,2,3,4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1st method: create new list as output\n",
+    "def rotate(nums, k):\n",
+    "    out = []\n",
+    "    for i in range(-k, len(nums)-k):\n",
+    "        out.append(nums[i])\n",
+    "    nums[:] = out\n",
+    "    return nums"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2nd method: pop off last list element and insert at front\n",
+    "# repeat k times\n",
+    "\n",
+    "def rotate(nums, k):\n",
+    "    while k > 0:\n",
+    "        nums.insert(0, nums.pop())\n",
+    "        k = k-1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 99, -1, -100]"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# test 1\n",
+    "nums = [-1,-100,3,99]\n",
+    "k = 2\n",
+    "rotate(nums, k)\n",
+    "nums"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5, 6, 7, 1, 2, 3, 4]"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# test 2\n",
+    "nums = [1,2,3,4,5,6,7]\n",
+    "k = 3\n",
+    "rotate(nums, k)\n",
     "nums"
    ]
   },
