--- a/Leetcode_challenges1.ipynb
+++ b/Leetcode_challenges1.ipynb
@@ -156,6 +156,101 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Best Time to Buy and Sell Stock II\n",
+    "Say you have an array prices for which the ith element is the price of a given stock on day i.\n",
+    "\n",
+    "Design an algorithm to find the maximum profit. You may complete as many transactions as you like (i.e., buy one and sell one share of the stock multiple times).\n",
+    "\n",
+    "Note: You may not engage in multiple transactions at the same time (i.e., you must sell the stock before you buy again).\n",
+    "\n",
+    "Example:\n",
+    "* Input: [7,1,5,3,6,4]\n",
+    "* Output: 7\n",
+    "* Explanation: Buy on day 2 (price = 1) and sell on day 3 (price = 5), profit = 5-1 = 4.\n",
+    "             Then buy on day 4 (price = 3) and sell on day 5 (price = 6), profit = 6-3 = 3."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def maxProfit(prices):\n",
+    "    buy = []\n",
+    "    sell = []\n",
+    "    # initially transaction is false until we buy\n",
+    "    trans = False\n",
+    "    \n",
+    "    for i in range(len(prices)-1):\n",
+    "        # selling if we bought before\n",
+    "        if trans == True:\n",
+    "            if prices[i+1] < prices[i]:\n",
+    "                sell.append(prices[i])\n",
+    "                trans = False\n",
+    "        # buying\n",
+    "        if trans == False:\n",
+    "            if prices[i] < prices[i+1]:\n",
+    "                buy.append(prices[i])\n",
+    "                trans = True\n",
+    "    # sell the last element in the list if we have a transaction going on\n",
+    "    if len(sell) < len(buy):\n",
+    "        sell.append(prices[-1])\n",
+    "\n",
+    "    return sum(sell) - sum(buy)   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 179,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## test\n",
+    "#prices = [7,1,5,3,6,4]\n",
+    "#prices = [1,2,3,4,5]\n",
+    "#prices = [7,6,4,3,1]\n",
+    "prices = [6,1,3,2,4,7]\n",
+    "\n",
+    "maxProfit(prices)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
